# scrapbook-md

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  scrap  setup.sh
cli/: __init__.py  cli.py  config.py  models.py  search.py  storage.py
scripts/: backup.sh  deploy.sh  setup.sh
website/: Dockerfile  docusaurus.config.ts  nginx.conf  package-lock.json  package.json  server.js  sidebars.ts  start-dev.sh  tailwind.config.js  tsconfig.json
website/docs/: intro.md
website/docs/diagrams/: sample-mermaid.md
website/docs/slash-commands/: create-diagram.md  create-idea.md  create-journal.md  create-plan-file.md  create-todo.md  create-workflow.md  index.md  random-todo.md  search-entries.md
website/scripts/: generate-todo-manifest.js
website/src/components/: ColourSelector.tsx  HomeNavbarItem.tsx
website/src/components/KanbanBoard/: BoardContainer.tsx  Card.tsx  Column.tsx  README.md  boardUtils.ts  index.tsx  sampleData.ts  styles.module.css  withDroppable.tsx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx  kanban.tsx
website/src/theme/: Root.tsx.backup  SearchBar.tsx
website/src/theme/DocCardList/: index.tsx  styles.module.css
website/src/theme/Footer/: index.tsx
website/src/theme/MDXComponents/: index.tsx
website/src/theme/Mermaid/: index.tsx  styles.module.css
website/src/theme/MermaidWithPopout/: index.tsx  styles.module.css
website/src/theme/NotFound/: index.tsx
website/static/js/: .gitkeep  force-dark-theme.js
(+1 files in other folders)
